Updates sequence viewer to take into account dnon-numeric indices. Updates single sequence example

--- a/projects/demo-showcase/src/app/page-sequence-viewer/single-sequence-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-sequence-viewer/single-sequence-viewer.component.html
@@ -4,7 +4,7 @@
   <h2>Single sequence viewer</h2>
   <!-- Show single sequence viewer -->
   <div class="mb-3">
-    <ngx-sequence-viewer [sequence]="sequence" [index]="index" [settings]="settings$ | async"></ngx-sequence-viewer>
+    <ngx-sequence-viewer [sequence]="sequence" [index]="index" [loci]="loci" [settings]="settings$ | async"></ngx-sequence-viewer>
   </div>
   <!-- Explain example -->
   <div class="mb-3">
