--- a/projects/demo-showcase/src/styles/_background.scss
+++ b/projects/demo-showcase/src/styles/_background.scss
@@ -1,9 +1,9 @@
 // $gradient: linear-gradient(45deg, #648FFF, #DC267F);
 
 .navbar {
-  background: #648FFF;
+  background: linear-gradient(45deg, #648FFF, #DC267F);
 }
 
 .bg-primary {
-  background: #648FFF;
+  background: linear-gradient(45deg, #648FFF, #DC267F);
 }
