--- a/projects/demo-showcase/src/app/app.component.html
+++ b/projects/demo-showcase/src/app/app.component.html
@@ -4,8 +4,8 @@
     <div class="container-fluid">
       <!-- Main icon -->
       <a class="navbar-brand d-flex flex-row align-items-center gap-3" href="#">
-        <img src="assets/ngx-biocomp-up-white.png" alt="ngx-biocomp-up" height="38">
-        <h1 class="h2 text-white m-0">ngx-biocomp-up</h1>
+        <img src="assets/ngx-biocomp-up.png" alt="ngx-biocomp-up" height="38">
+        <h1 class="h2 text-white m-0">ngx-mol-viewers</h1>
       </a>
       <!-- Right side -->
       <ul class="navbar-nav">
