--- a/projects/demo-showcase/src/styles/_utils.scss
+++ b/projects/demo-showcase/src/styles/_utils.scss
@@ -1,3 +1,7 @@
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .squared {
   width: 100%;
   padding-top: 100%; /* Set the padding-top to create a square shape */
