--- a/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
+++ b/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
@@ -1,8 +1,9 @@
-@import '../styles/labels';
-@import '../styles/icons';
+
 
 // Add this to apply style only to elements within the `ngx-features-viewer`
-:host ::ng-deep {
+ngx-features-viewer {
+  // @import '../styles/labels';
+  // @import '../styles/icons';
 
   svg * {
     transform-box: fill-box;
