--- a/projects/demo-showcase/src/app/page-structure-viewer/page-structure-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-structure-viewer/page-structure-viewer.component.html
@@ -8,30 +8,10 @@
       releases of Angular and automatized the most common features of Mol*.
     </p>
   </div>
-  <!-- TODO Remove this -->
-  <div class="row">
-    <button class="btn btn-primary" (click)="changeSource()">
-      Change source
-    </button>
-    <!-- Sequence viewer -->
-    <div class="col-6" [ngClass]="{'visually-hidden': hideStructureComponent$ | async}">
-      <!-- Define squared container -->
-      <div class="position-relative overflow-hidden squared rounded">
-        <!-- Define placeholder -->
-        <div class="position-absolute left-0 top-0 w-100 h-100 placeholder"></div>
-        <!-- Define the viewer -->
-        <ngx-structure-viewer [loci]="loci"
-                              [settings]="settings$ | async"
-                              [source]="source$ | async"
-                              (structureLoadFail$)="structureLoadFailed()"/>
-      </div>
-      <!-- Change settings -->
-      <div class="col-3">
-        <!--  -->
-      </div>
-    </div>
+  <!-- Section: example -->
+  <div class="mb-3">
     <!-- Section: choose sources -->
-    <!-- <app-section-sources></app-section-sources> -->
+    <app-section-sources></app-section-sources>
     <!-- Section: color chains -->
     <!-- <app-section-chains></app-section-chains> -->
     <!-- Section: show contacts -->
