--- a/projects/demo-showcase/src/styles.scss
+++ b/projects/demo-showcase/src/styles.scss
@@ -32,6 +32,7 @@
 @import "bootstrap/scss/card";
 @import "bootstrap/scss/dropdown";
 @import "bootstrap/scss/placeholders";
+@import "bootstrap/scss/forms";
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "bootstrap/scss/utilities/api";
@@ -58,5 +59,5 @@
 @import "bootstrap-icons";
 @import "./styles/background";
 @import "./styles/scaffold";
+@import "./styles/molstar";
 @import "./styles/utils";
-
