--- a/projects/demo-showcase/src/app/page-structure-viewer/page-structure-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-structure-viewer/page-structure-viewer.component.html
@@ -12,11 +12,13 @@
   <div class="mb-3">
     <!-- Section: choose sources -->
     <app-section-sources></app-section-sources>
-    <!-- Section: color chains -->
-    <!-- <app-section-chains></app-section-chains> -->
     <!-- Section: show contacts -->
     <!-- <app-section-interactions></app-section-interactions> -->
     <!-- Section: show highlights -->
     <!-- <app-section-highlights></app-section-highlights> -->
+  </div>
+  <div class="mb-3">
+    <!-- Section: color chains -->
+    <app-section-chains></app-section-chains>
   </div>
 </div>
