--- a/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
+++ b/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.scss
@@ -1,115 +1,116 @@
 // Add this to apply style only to elements within the `ngx-features-viewer`
-ngx-features-viewer {
-   @import '../styles/labels';
-  // @import '../styles/icons';
 
-  svg * {
-    transform-box: fill-box;
-  }
+::ng-deep {
+  ngx-features-viewer {
+    @import '../styles/labels';
 
-  // Variable for styling the features
-  :root {
-    --overlay-cursor: crosshair;
-    --feature-cursor: default;
-    --feature-hover-color: none;
-    --feature-hover-width: none;
-    --locus-hover-border-radius: 0;
-    --sequence-font-size: 16px;
-    --feature-font-size: 16px;
-    --x-axis-font-size: 16px;
-    --feature-font-family: monospace;
-    --sequence-font-family: monospace;
-    --x-axis-font-family: monospace;
-  }
-
-  .brush .selection {
-    stroke: #0b2ea2;
-    stroke-width: 1;
-    fill: #4682b4;
-    fill-opacity: .325;
-    shape-rendering: crispEdges;
-    display: block;
-    height: 100%;
-  }
-
-  g .feature {
-    // Cursor style on a specific feature
-    cursor: var(--feature-cursor);
-    // The font size of the feature label
-    font-size: var(--feature-font-size);
-    font-family: var(--feature-font-family), monospace;
-
-    // The text inside a feature is not clickable
-    >text {
-      pointer-events: none;
+    svg * {
+      transform-box: fill-box;
     }
 
-    // The locus and pin feature can be highlighted when hovered
-    &.locus>rect:hover,
-    &.pin>circle:hover,
-    &.poly>polygon:hover {
-      stroke: var(--feature-hover-color);
-      stroke-width: var(--feature-hover-width);
+    // Variable for styling the features
+    :root {
+      --overlay-cursor: crosshair;
+      --feature-cursor: default;
+      --feature-hover-color: none;
+      --feature-hover-width: none;
+      --locus-hover-border-radius: 0;
+      --sequence-font-size: 16px;
+      --feature-font-size: 16px;
+      --x-axis-font-size: 16px;
+      --feature-font-family: monospace;
+      --sequence-font-family: monospace;
+      --x-axis-font-family: monospace;
     }
 
-    &.dssp:hover {
+    .brush .selection {
+      stroke: #0b2ea2;
+      stroke-width: 1;
+      fill: #4682b4;
+      fill-opacity: .325;
+      shape-rendering: crispEdges;
+      display: block;
+      height: 100%;
+    }
 
-      >.sheet,
-      >.turn {
+    g .feature {
+      // Cursor style on a specific feature
+      cursor: var(--feature-cursor);
+      // The font size of the feature label
+      font-size: var(--feature-font-size);
+      font-family: var(--feature-font-family), monospace;
+
+      // The text inside a feature is not clickable
+      > text {
+        pointer-events: none;
+      }
+
+      // The locus and pin feature can be highlighted when hovered
+      &.locus > rect:hover,
+      &.pin > circle:hover,
+      &.poly > polygon:hover {
         stroke: var(--feature-hover-color);
         stroke-width: var(--feature-hover-width);
       }
 
-      >.helix {
-        stroke: var(--feature-hover-color);
-        stroke-width: 0.5;
-      }
+      &.dssp:hover {
 
-      >.coil {
-        filter: drop-shadow(0 2px var(--feature-hover-color));
+        > .sheet,
+        > .turn {
+          stroke: var(--feature-hover-color);
+          stroke-width: var(--feature-hover-width);
+        }
+
+        > .helix {
+          stroke: var(--feature-hover-color);
+          stroke-width: 0.5;
+        }
+
+        > .coil {
+          filter: drop-shadow(0 2px var(--feature-hover-color));
+        }
       }
     }
-  }
 
-  .hover-circle-marker {
-    fill: var(--feature-hover-color);
-  }
+    .hover-circle-marker {
+      fill: var(--feature-hover-color);
+    }
 
-  g .sequence {
-    font-size: var(--sequence-font-size);
-    font-family: var(--sequence-font-family), monospace;
-  }
+    g .sequence {
+      font-size: var(--sequence-font-size);
+      font-family: var(--sequence-font-family), monospace;
+    }
 
-  g .tick {
-    font-size: var(--x-axis-font-size);
-    font-family: var(--x-axis-font-family), monospace !important;
-  }
+    g .tick {
+      font-size: var(--x-axis-font-size);
+      font-family: var(--x-axis-font-family), monospace !important;
+    }
 
-  .overlay {
-    cursor: var(--overlay-cursor);
-  }
+    .overlay {
+      cursor: var(--overlay-cursor);
+    }
 
-  // Global setting for all text elements
-  text {
-    //font-family: monospace;
-    user-select: none;
-  }
+    // Global setting for all text elements
+    text {
+      //font-family: monospace;
+      user-select: none;
+    }
 
-
-  .tooltip {
-    user-select: none;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    margin: 0;
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    white-space: nowrap;
-    z-index: 9999999;
-    transition: opacity 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s, visibility 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s, transform 0.4s cubic-bezier(0.23, 1, 0.32, 1) 0s;
-    transform: translate3d(0px, 0px, 0px);
-    pointer-events: none;
-    opacity: 0;
-    visibility: hidden;
+    .tooltip {
+      user-select: none;
+      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+      margin: 0;
+      display: block;
+      position: fixed;
+      top: 0;
+      left: 0;
+      white-space: nowrap;
+      z-index: 9999999;
+      transition: opacity 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s, visibility 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s, transform 0.4s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+      transform: translate3d(0px, 0px, 0px);
+      pointer-events: none;
+      opacity: 0;
+      visibility: hidden;
+    }
   }
 }
